--- a/website/index.html
+++ b/website/index.html
@@ -258,16 +258,16 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1714959085272" data-listing-reading-time-sort="6" data-listing-word-count-sort="1092">
-<a href="./models/clustering.html" class="quarto-grid-link">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1714968579143" data-listing-reading-time-sort="4" data-listing-word-count-sort="605">
+<a href="./conclusions.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<p class="card-img-top"><img src="images\endimg.jpg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
 <h5 class="no-anchor card-title listing-title" data-anchor-id="home">
-Clustering
+Conclusions
 </h5>
 <div class="card-text listing-description">
-Clustering is a fundamental unsupervised learning technique in machine learning that involves grouping similar data points together based on certain features or…
+The exploration of Amazon’s vast retail product data through advanced analytics and machine learning techniques has given implications across various domains. This endeavor…
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
@@ -278,87 +278,7 @@ Clustering is a fundamental unsupervised learning technique in machine learning 
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1714957321291" data-listing-reading-time-sort="7" data-listing-word-count-sort="1341">
-<a href="./models/pca.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images\pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-PCA and SVD
-</h5>
-<div class="card-text listing-description">
-Principal Component Analysis (PCA) is a dimensionality reduction technique commonly used in data analysis and ML. At its core, PCA aims to transform high-dimensional data…
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1714955588309" data-listing-reading-time-sort="15" data-listing-word-count-sort="2889">
-<a href="./models/nn.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images\nn.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Neural Networks
-</h5>
-<div class="card-text listing-description">
-Neural networks are machine learning models inspired by the brain’s neural structure, comprising interconnected neurons organized in layers. Input data enters the input…
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1714848180000" data-listing-reading-time-sort="7" data-listing-word-count-sort="1211">
-<a href="./models/regression.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images\lr.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Linear Regression
-</h5>
-<div class="card-text listing-description">
-Linear regression is a statistical method used to model the relationship between a dependent variable and one or more independent variables. It’s a fundamental technique in…
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1714453436000" data-listing-reading-time-sort="14" data-listing-word-count-sort="2661">
-<a href="./models/svm.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images\svm_1.png" alt="Example SVM" style="height: 150px;"  class="thumbnail-image card-img"/></p>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-SVM (Support Vector Machine)
-</h5>
-<div class="card-text listing-description">
-Support Vector Machines (SVMs) are a type of supervised learning model used for classification and regression tasks. They work by finding the hyperplane that best separates…
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1713820672000" data-listing-reading-time-sort="5" data-listing-word-count-sort="996">
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1714968414586" data-listing-reading-time-sort="7" data-listing-word-count-sort="1238">
 <a href="./intro.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -378,7 +298,107 @@ In today’s digital landscape dominated by e-commerce giants such as Amazon, th
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1713341428000" data-listing-reading-time-sort="15" data-listing-word-count-sort="2830">
+<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1714959966675" data-listing-reading-time-sort="6" data-listing-word-count-sort="1096">
+<a href="./models/clustering.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images\clust_base.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Clustering
+</h5>
+<div class="card-text listing-description">
+Clustering is a fundamental unsupervised learning technique in machine learning that involves grouping similar data points together based on certain features or…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1714957321291" data-listing-reading-time-sort="7" data-listing-word-count-sort="1341">
+<a href="./models/pca.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images\pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+PCA and SVD
+</h5>
+<div class="card-text listing-description">
+Principal Component Analysis (PCA) is a dimensionality reduction technique commonly used in data analysis and ML. At its core, PCA aims to transform high-dimensional data…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1714955588309" data-listing-reading-time-sort="15" data-listing-word-count-sort="2889">
+<a href="./models/nn.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images\nn.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Neural Networks
+</h5>
+<div class="card-text listing-description">
+Neural networks are machine learning models inspired by the brain’s neural structure, comprising interconnected neurons organized in layers. Input data enters the input…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1714848180000" data-listing-reading-time-sort="7" data-listing-word-count-sort="1211">
+<a href="./models/regression.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images\lr.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+Linear Regression
+</h5>
+<div class="card-text listing-description">
+Linear regression is a statistical method used to model the relationship between a dependent variable and one or more independent variables. It’s a fundamental technique in…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1714453436000" data-listing-reading-time-sort="14" data-listing-word-count-sort="2661">
+<a href="./models/svm.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images\svm_1.png" alt="Example SVM" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+SVM (Support Vector Machine)
+</h5>
+<div class="card-text listing-description">
+Support Vector Machines (SVMs) are a type of supervised learning model used for classification and regression tasks. They work by finding the hyperplane that best separates…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1713341428000" data-listing-reading-time-sort="15" data-listing-word-count-sort="2830">
 <a href="./models/dtrees.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\dt_1.jpg" alt="Decision tree structure" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -398,7 +418,7 @@ Decision trees are a popular supervised learning algorithm used for both classif
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1713336948000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
+<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1713336948000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
 <a href="./models/bayes.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\nb.jpg" alt="How Naive Bayes classifies categories." style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -418,7 +438,7 @@ Naive Bayes is a popular and simple probabilistic machine learning algorithm bas
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="8" data-listing-file-modified-sort="1709162661617" data-listing-reading-time-sort="11" data-listing-word-count-sort="2077">
+<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1709162661617" data-listing-reading-time-sort="11" data-listing-word-count-sort="2077">
 <a href="./data.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\violin_bim.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -428,26 +448,6 @@ Data Prep / EDA
 </h5>
 <div class="card-text listing-description">
 Where the data source, processing, and visualization (EDA) is presented.
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="9" data-listing-file-modified-sort="1707516080000" data-listing-reading-time-sort="1" data-listing-word-count-sort="3">
-<a href="./conclusions.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Conclusions
-</h5>
-<div class="card-text listing-description">
-Placeholder
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
