--- a/website/models/dtrees.html
+++ b/website/models/dtrees.html
@@ -246,7 +246,7 @@ ul.task-list li input[type="checkbox"] {
 <div style="float:right; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/dt_1.jpg" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-1" title="Decision tree structure"><img src="../images/dt_1.jpg" class="img-fluid figure-img" alt="Decision tree structure"></a></p>
+<p><a href="../images/dt_1.jpg" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-description="" title="Decision tree structure"><img src="../images/dt_1.jpg" class="img-fluid figure-img" alt="Decision tree structure"></a></p>
 <figcaption>Decision tree structure</figcaption>
 </figure>
 </div>
@@ -257,7 +257,7 @@ ul.task-list li input[type="checkbox"] {
 <div style="float:left; width:34%; padding:2%">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><a href="../images/dt_2.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-2" title="The decision tree structure for the given example"><img src="../images/dt_2.png" class="img-fluid figure-img" alt="The decision tree structure for the given example"></a></p>
+<p><a href="../images/dt_2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-description="" title="The decision tree structure for the given example"><img src="../images/dt_2.png" class="img-fluid figure-img" alt="The decision tree structure for the given example"></a></p>
 <figcaption>The decision tree structure for the given example</figcaption>
 </figure>
 </div>
@@ -669,19 +669,19 @@ Table&nbsp;2: Standard metrics showing the performance of the 3 models.
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/dt_tree_rf.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-4" title="Random Forest Classifier"><img src="../images/dt_tree_rf.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/dt_tree_rf.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-description="" title="Random Forest Classifier"><img src="../images/dt_tree_rf.png" class="img-fluid figure-img"></a></p>
 <figcaption>Random Forest Classifier</figcaption>
 </figure>
 </div>
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/dt_tree_class.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-5" title="Standard Classifier"><img src="../images/dt_tree_class.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/dt_tree_class.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-description="" title="Standard Classifier"><img src="../images/dt_tree_class.png" class="img-fluid figure-img"></a></p>
 <figcaption>Standard Classifier</figcaption>
 </figure>
 </div>
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 33.3%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/dt_tree_reg.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-6" title="Regression DT"><img src="../images/dt_tree_reg.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/dt_tree_reg.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-description="" title="Regression DT"><img src="../images/dt_tree_reg.png" class="img-fluid figure-img"></a></p>
 <figcaption>Regression DT</figcaption>
 </figure>
 </div>
@@ -701,7 +701,7 @@ Figure&nbsp;1: A visualization of the first 3 levels of the 3 decision tree mode
 <div id="fig-reg1" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-reg1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/dt_reg1.png" class="lightbox" data-description="Figure&nbsp;2: True vs predicted label for the regression DT." data-gallery="quarto-lightbox-gallery-7"><img src="../images/dt_reg1.png" class="img-fluid figure-img"></a>
+<a href="../images/dt_reg1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-description="Figure&nbsp;2: True vs predicted label for the regression DT."><img src="../images/dt_reg1.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-reg1-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;2: True vs predicted label for the regression DT.
@@ -712,7 +712,7 @@ Figure&nbsp;2: True vs predicted label for the regression DT.
 <div id="fig-reg2" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-reg2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/dt_reg2.png" class="lightbox" data-description="Figure&nbsp;3: Predicted price vs the residuals for the regression DT." data-gallery="quarto-lightbox-gallery-8"><img src="../images/dt_reg2.png" class="img-fluid figure-img"></a>
+<a href="../images/dt_reg2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-8" data-description="Figure&nbsp;3: Predicted price vs the residuals for the regression DT."><img src="../images/dt_reg2.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-reg2-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;3: Predicted price vs the residuals for the regression DT.
@@ -731,7 +731,7 @@ Figure&nbsp;3: Predicted price vs the residuals for the regression DT.
 <div id="fig-cm" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/dt_cm.png" class="lightbox" data-description="Figure&nbsp;4: The confusion matrix of true vs predicted labels of the random forest classifier." data-gallery="quarto-lightbox-gallery-9"><img src="../images/dt_cm.png" class="img-fluid figure-img"></a>
+<a href="../images/dt_cm.png" class="lightbox" data-gallery="quarto-lightbox-gallery-9" data-description="Figure&nbsp;4: The confusion matrix of true vs predicted labels of the random forest classifier."><img src="../images/dt_cm.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;4: The confusion matrix of true vs predicted labels of the random forest classifier.
@@ -1173,7 +1173,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"openEffect":"zoom","selector":".lightbox","descPosition":"bottom"});</script>
+<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","openEffect":"zoom","selector":".lightbox","closeEffect":"zoom","loop":false});</script>
 
 
 
