--- a/website/models/nn.html
+++ b/website/models/nn.html
@@ -564,13 +564,13 @@ Table&nbsp;1: The form of the final dataset used for each of the 2 models, witho
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_bs_structure.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-3" title="The structure of the “Is Best Seller” NN"><img src="../images/nn_bs_structure.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_bs_structure.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-description="" title="The structure of the “Is Best Seller” NN"><img src="../images/nn_bs_structure.png" class="img-fluid figure-img"></a></p>
 <figcaption>The structure of the “Is Best Seller” NN</figcaption>
 </figure>
 </div>
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_pd_structure.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-4" title="The structure of the “Price Diff” NN"><img src="../images/nn_pd_structure.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_pd_structure.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-description="" title="The structure of the “Price Diff” NN"><img src="../images/nn_pd_structure.png" class="img-fluid figure-img"></a></p>
 <figcaption>The structure of the “Price Diff” NN</figcaption>
 </figure>
 </div>
@@ -591,13 +591,13 @@ Figure&nbsp;1: The NN structures used
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_bs_loss.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-5" title="“Is Best Seller” NN"><img src="../images/nn_bs_loss.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_bs_loss.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-description="" title="“Is Best Seller” NN"><img src="../images/nn_bs_loss.png" class="img-fluid figure-img"></a></p>
 <figcaption>“Is Best Seller” NN</figcaption>
 </figure>
 </div>
 <div class="quarto-figure quarto-figure-center quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
 <figure class="figure">
-<p><a href="../images/nn_pd_loss.png" class="lightbox" data-description="" data-gallery="quarto-lightbox-gallery-6" title="“Price Diff” NN"><img src="../images/nn_pd_loss.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/nn_pd_loss.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-description="" title="“Price Diff” NN"><img src="../images/nn_pd_loss.png" class="img-fluid figure-img"></a></p>
 <figcaption>“Price Diff” NN</figcaption>
 </figure>
 </div>
@@ -672,7 +672,7 @@ Table&nbsp;2: The performance metrics of the “Is Best Seller” NN.
 <div id="fig-cm" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/nn_bs_cm.png" class="lightbox" data-description="Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN." data-gallery="quarto-lightbox-gallery-7"><img src="../images/nn_bs_cm.png" class="img-fluid figure-img"></a>
+<a href="../images/nn_bs_cm.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-description="Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN."><img src="../images/nn_bs_cm.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-cm-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN.
@@ -687,7 +687,7 @@ Figure&nbsp;3: The confusion matrix of the “Is Best Seller” NN.
 <div id="fig-pd-diff" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-pd-diff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/nn_pd_diff.png" class="lightbox" data-description="Figure&nbsp;4: The plot of the actual true price difference, visualized against how much of a difference the model’s predicted value was against the true value." data-gallery="quarto-lightbox-gallery-8"><img src="../images/nn_pd_diff.png" class="img-fluid figure-img"></a>
+<a href="../images/nn_pd_diff.png" class="lightbox" data-gallery="quarto-lightbox-gallery-8" data-description="Figure&nbsp;4: The plot of the actual true price difference, visualized against how much of a difference the model’s predicted value was against the true value."><img src="../images/nn_pd_diff.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-pd-diff-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;4: The plot of the actual true price difference, visualized against how much of a difference the model’s predicted value was against the true value.
@@ -1121,7 +1121,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"openEffect":"zoom","selector":".lightbox","closeEffect":"zoom","loop":false,"descPosition":"bottom"});</script>
+<script>var lightboxQuarto = GLightbox({"descPosition":"bottom","openEffect":"zoom","loop":false,"selector":".lightbox","closeEffect":"zoom"});</script>
 
 
 
