--- a/website/models/pca.html
+++ b/website/models/pca.html
@@ -577,31 +577,31 @@ Figure&nbsp;2: The found principal components, colored by a feature in the datas
 <div aria-describedby="fig-pcs-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><a href="../images/pca_f7.png" class="lightbox" data-gallery="quarto-lightbox-gallery-1" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs."><img src="../images/pca_f7.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f7.png" class="lightbox" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs." data-gallery="quarto-lightbox-gallery-1"><img src="../images/pca_f7.png" class="img-fluid figure-img"></a></p>
 </div>
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><a href="../images/pca_f3.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs."><img src="../images/pca_f3.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f3.png" class="lightbox" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs." data-gallery="quarto-lightbox-gallery-2"><img src="../images/pca_f3.png" class="img-fluid figure-img"></a></p>
 </div>
 </div>
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><a href="../images/pca_f4.png" class="lightbox" data-gallery="quarto-lightbox-gallery-3" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs."><img src="../images/pca_f4.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f4.png" class="lightbox" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs." data-gallery="quarto-lightbox-gallery-3"><img src="../images/pca_f4.png" class="img-fluid figure-img"></a></p>
 </div>
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><a href="../images/pca_f1.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs."><img src="../images/pca_f1.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f1.png" class="lightbox" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs." data-gallery="quarto-lightbox-gallery-4"><img src="../images/pca_f1.png" class="img-fluid figure-img"></a></p>
 </div>
 </div>
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><a href="../images/pca_f5.png" class="lightbox" data-gallery="quarto-lightbox-gallery-5" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs."><img src="../images/pca_f5.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f5.png" class="lightbox" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs." data-gallery="quarto-lightbox-gallery-5"><img src="../images/pca_f5.png" class="img-fluid figure-img"></a></p>
 </div>
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><a href="../images/pca_f2.png" class="lightbox" data-gallery="quarto-lightbox-gallery-6" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs."><img src="../images/pca_f2.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f2.png" class="lightbox" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs." data-gallery="quarto-lightbox-gallery-6"><img src="../images/pca_f2.png" class="img-fluid figure-img"></a></p>
 </div>
 </div>
 <div class="quarto-layout-row quarto-layout-valign-top">
 <div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: center;">
-<p><a href="../images/pca_f6.png" class="lightbox" data-gallery="quarto-lightbox-gallery-7" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs."><img src="../images/pca_f6.png" class="img-fluid figure-img"></a></p>
+<p><a href="../images/pca_f6.png" class="lightbox" data-description="Figure&nbsp;2: The found principal components, colored by a feature in the dataset where the feature has visible stratification in the PCs." data-gallery="quarto-lightbox-gallery-7"><img src="../images/pca_f6.png" class="img-fluid figure-img"></a></p>
 </div>
 </div>
 </div>
@@ -1050,7 +1050,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"loop":false,"selector":".lightbox","openEffect":"zoom","descPosition":"bottom","closeEffect":"zoom"});</script>
+<script>var lightboxQuarto = GLightbox({"loop":false,"openEffect":"zoom","selector":".lightbox","closeEffect":"zoom","descPosition":"bottom"});</script>
 
 
 
